# ember

./: .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/milestones/: A0.md
ember/: __init__.py  data.py  model.py  train.py
experiments/: LEADERBOARD.md
tests/: test_data.py  test_overfit.py
tools/: baseline.sh  compare_a0.py  env_check.py  get_data.py
