[project]
name = "ember"
version = "0.0.1"
description = "A from-scratch, hackable GPT model + training library."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ember*"]
